Bug 43790 - Page Break: edit/delete option box looks bad in RTL
Summary: Page Break: edit/delete option box looks bad in RTL
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.5.0 Beta0
Hardware: Other All
: medium normal
Assignee: Cédric Bosdonnat
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-12-13 05:43 UTC by Lior Kaplan
Modified: 2011-12-22 14:33 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
page break in LTR interface (71.99 KB, image/png)
2011-12-13 05:45 UTC, Lior Kaplan
Details
page break in RTL interface (61.45 KB, image/png)
2011-12-13 05:46 UTC, Lior Kaplan
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Lior Kaplan 2011-12-13 05:43:23 UTC
The new page break control is really useful - thanks. But it's a bit problematic in RTL interface.

At the moment the control and option box are both on the left (even on RTL interface). But the position on the options box results in some of the text being cut.

I see two options:
1. Make sure the box will "start" in a position more to the right, so it would have enough space to spread left (all in RTL interface).
2. Have the page break control mirrored to the right for RTL interface, and start the box just bellow the control, this will leave it enough space to the left for the text.

Attached are screen shots of the options box in LTR and RTL interface.
Comment 1 Lior Kaplan 2011-12-13 05:45:59 UTC
Created attachment 54392 [details]
page break in LTR interface
Comment 2 Lior Kaplan 2011-12-13 05:46:21 UTC
Created attachment 54393 [details]
page break in RTL interface
Comment 3 Cédric Bosdonnat 2011-12-14 07:34:02 UTC
I can't reproduce the text cutting in the menu. Could you give some details how to reproduce it? Moving the button to the right is fine for me, but what about the case for book view?
Comment 4 Lior Kaplan 2011-12-14 11:16:41 UTC
In RTL UI, and maximized window, open a document and create a page break. Set zoom to "page width", and open the page break options box. With this zoom level, some of the text in the options box appear beyond screen borders.

I'm restored the window size, and played a little with its location. It seems the the location of the options menu relatively to the page break marker is also affected from the window location on screen.

This only happens in RTL interface. In LTR interface you need to more the application window to the right side, so most of the window will be out of sight, than the marker is close to the right border of the screen and the options box open is a different location relatively to the marker.


For book view, the current behavior of the marker location should be kept (= marker on the right for a right page, marker on the left for a left page).

The options box location problem is relevant for all 3 view modes - single, automatic and book.
Comment 5 Cédric Bosdonnat 2011-12-16 07:59:03 UTC
Fixed in master (3.6):
http://cgit.freedesktop.org/libreoffice/core/commit/?id=f6b679e831ebf4a85b3baf37ea0198959f58fa1f

This also fixes the position of other popup menus in RTL (like the one of the post-its button).
Comment 6 Korrawit Pruegsanusak 2011-12-16 09:04:07 UTC
Cédric also pushed this fix into -3-5 branch => will be in 3.5 beta 2

http://cgit.freedesktop.org/libreoffice/core/commit/?h=libreoffice-3-5&id=588857a86bcbc85e21b70ca95a9ab0c0b782a996
Comment 7 Lior Kaplan 2011-12-22 14:33:20 UTC
Verified the fix in 3.5.0 Beta2... thank you Cédric.